# memory-enterprise-mcp

./: .env.example  .gitignore  CLAUDE_DESKTOP_INTEGRATION.md  CURSOR_INTEGRATION.md  DEPLOYMENT.md  Makefile  Memory-enterprise-mcp_integration.md  PINECONE_MCP_SETUP.md  PM2_MANAGEMENT.md  PROJECT_STATUS.md  README.md  claude_desktop_config.json  docker-compose.yml  knowledgeManager.md  memory-enterprise-mcp-progress.md  nginx-kms.conf  package-lock.json  package.json  pyproject.toml  rag_mcp.md
.cursor/: mcp.json
.github/workflows/: cd.yml  ci.yml
deployments/docker/: Dockerfile
frontend/: README.md  ecosystem.config.js  next.config.mjs  package-lock.json  package.json  pm2-manager.sh
frontend/app/: layout.tsx  page.tsx
frontend/app/api/knowledge/: route.ts
frontend/app/api/knowledge/[id]/: route.ts
frontend/app/connections/: page.tsx
frontend/app/home/: page.tsx
frontend/app/knowledge/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: chat-interface.tsx  header.tsx  sidebar.tsx
src/: main.py
src/api/: auth.py  health.py  knowledge.py  mcp_mock.py  memory.py
src/core/: __init__.py  config.py  embedding.py  rag_engine.py  vector_store.py
src/mcp/: __init__.py  claude_server.py  jsonrpc_sse_server.py  server.py  sse_server.py  stdio_server.py  tools.py
src/models/: __init__.py  entity.py  memory.py  source.py  tenant.py  user.py
src/poc/: __init__.py  google_docs_poc.py  pinecone_isolation_poc.py
src/services/: __init__.py  memory_service.py  wiki_link_service.py
tests/: __init__.py
